--- a/chrome_extension/popup.css
+++ b/chrome_extension/popup.css
@@ -1,46 +1,39 @@
-/* Base styles */
 body, button {
     font-family: 'Arial', sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
-/* Popup styles */
 .popup-container {
-    text-align: center;
+    width: 400px;
+    max-width: 100%;
     padding: 15px;
+    background-color: #f4f4f4;
     color: #333;
-    background-color: #eef2f7;
+    box-sizing: border-box;
 }
 
 .popup-header {
+    text-align: center;
     margin-bottom: 20px;
 }
 
 .popup-header .logo {
     width: 48px;
-    height: 48px;
-}
-
-.popup-header h1 {
-    font-size: 1.2em;
-    color: #005792;
-    margin: 0;
 }
 
 .popup-main {
-    margin-top: 10px;
+    text-align: center;
 }
 
 .send-url-button {
     background-color: #007cba;
     color: white;
     border: none;
-    border-radius: 5px;
     padding: 10px 20px;
     cursor: pointer;
-    font-size: 1em;
-    outline: none;
-    margin-bottom: 10px;
-    transition: background-color 0.3s ease;
+    border-radius: 5px;
+    margin-bottom: 20px;
 }
 
 .send-url-button:hover {
@@ -48,12 +41,28 @@ body, button {
 }
 
 .api-response {
-    display: none; /* Hidden by default, display it when there's content */
-    background-color: white;
+    display: none; /* Initially hidden; shown after data is received */
+    text-align: left;
     padding: 10px;
+    background-color: #fff;
     border: 1px solid #ccc;
     border-radius: 5px;
-    text-align: left;
-    min-height: 50px;
-    word-wrap: break-word;
+}
+
+section {
+    margin-top: 15px;
+}
+
+.popup-footer {
+    text-align: center;
+    margin-top: 20px;
+    font-size: 0.8em;
+    color: #666;
+}
+
+.loading-indicator {
+    color: #007cba; 
+    text-align: center;
+    margin-top: 20px;
+    font-size: 16px;
 }
